tests/parser-test-files/bad-files/_define-class.22.error
error: Invalid variable
  --> test:6:3
   |
 6 |    (.方法 (:a -> :a)))
   |     ^^^ variables cannot start with '.'
